force-app/main/default/objects/CARE_Household_Member_IncomeC__c/CARE_Household_Member_IncomeC__c.object-meta.xml
<CustomObject>
    <label>CARE Household Member IncomeC</label>
    <nameField>
        <displayFormat>CTMIC{000000000}</displayFormat>
        <label>NAME  (Member Income Seq)</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CARE Household Member IncomeC</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>