force-app/main/default/objects/CARE_Household_Member_IncomeC__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>CARE_Application__c</referenceTo>
    <relationshipLabel>CARE Household Member IncomeC</relationshipLabel>
    <relationshipName>CARE_Household_Member_IncomeC</relationshipName>
    <type>Lookup</type>
</CustomField>