force-app/main/default/objects/CARE_Household_Member_IncomeC__c/fields/C_NO__c.field-meta.xml
<CustomField>
    <fullName>C_NO__c</fullName>
    <label>C NO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>