force-app/main/default/objects/CARE_Household_Member_IncomeC__c/fields/DETAIL_INCOME__c.field-meta.xml
<CustomField>
    <fullName>DETAIL_INCOME__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DETAIL INCOME</label>
    <referenceTo>CARE_Household_Member_Income__c</referenceTo>
    <relationshipLabel>CARE Household Member IncomeC</relationshipLabel>
    <relationshipName>CARE_Household_Member_IncomeC</relationshipName>
    <type>Lookup</type>
</CustomField>