force-app/main/default/objects/CARE_Household_Member_IncomeC__c/fields/INCOME_SEQ__c.field-meta.xml
<CustomField>
    <fullName>INCOME_SEQ__c</fullName>
    <label>INCOME SEQ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>