force-app/main/default/objects/CARE_Household_Member_IncomeC__c/fields/LINE29__c.field-meta.xml
<CustomField>
    <fullName>LINE29__c</fullName>
    <label>LINE29</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>