force-app/main/default/objects/CARE_Household_Member_IncomeC__c/fields/LINE31__c.field-meta.xml
<CustomField>
    <fullName>LINE31__c</fullName>
    <label>LINE31</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>