force-app/main/default/objects/CARE_Household_Member_IncomeC__c/fields/LINE3__c.field-meta.xml
<CustomField>
    <fullName>LINE3__c</fullName>
    <label>LINE3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>